# Omloppsvektor

./: .gitignore  CMakeLists.txt  README.md
examples/: rocky.yaml  solarsystem.yaml
shaders/: fragment.frag  fragment.fs  geometry.gs  skybox.fs  skybox.vs  vertex.vert  vertex.vs
src/: body.cpp  body.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  main.cpp  simulation.cpp  simulation.hpp
